--- a/style.css
+++ b/style.css
@@ -52,3 +52,31 @@ body {
     animation: rotate 2s linear infinite;
   }
 }
+
+.dialog-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(179, 64, 64, 0.75);
+  padding: 2rem;
+  display: grid;
+  place-items: center;
+}
+
+.dialog-content {
+  position: relative;
+  width: 600px;
+  max-width: 100%;
+  height: 400px;
+  background: white;
+  border-radius: 6px;
+}
+
+.close-btn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: translateY(-100%);
+}
