--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: rgba(0, 0, 0, 0.774);
+  background-color: rgba(137, 176, 244, 0.774);
 
   margin: 0px;
 }
@@ -9,74 +9,14 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 2rem;
+  position: relative;
 }
-
-.block {
+.square {
   width: 250px;
   height: 250px;
   background-color: red;
-}
-
-.orbit {
-  height: 50px;
-  width: 50px;
-  background-color: aqua;
-  border-radius: 50%;
+  cursor: pointer;
   position: absolute;
-}
-
-@keyframes move {
-  from {
-    transform: rotate(0deg) translateX(250px);
-  }
-  to {
-    transform: rotate(360deg) translateX(250px);
-  }
-}
-
-@keyframes rotate {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .orbit {
-    animation: move 5s linear infinite;
-  }
-
-  .block {
-    animation: rotate 2s linear infinite;
-  }
-}
-
-.dialog-wrapper {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(179, 64, 64, 0.75);
-  padding: 2rem;
-  display: grid;
-  place-items: center;
-}
-
-.dialog-content {
-  position: relative;
-  width: 600px;
-  max-width: 100%;
-  height: 400px;
-  background: white;
-  border-radius: 6px;
-}
-
-.close-btn {
-  position: absolute;
-  top: 0;
-  right: 0;
-  transform: translateY(-100%);
+  border-radius: 20px;
 }
